# parsm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  commit-lint.yml  deploy-crate.yml  integration-test.yml  lint.yml  python-integration-test.yml  yamlfmt.yml
doc/: syntaxfieldselector.md
examples/: filter_and_template.rs  streaming_demo.sh  streaming_format_detection.rs
pest/: parsm.pest
src/: csv_parser.rs  dsl.rs  filter.rs  format_detector.rs  lib.rs  operators.rs  parse.rs  parser_registry.rs
src/dsl/: ast.rs  fallback.rs  filter_parser.rs  grammar.rs  mod.rs  operators.rs  template_parser.rs
tests/: ambiguous_regression_test.rs  csv_integration_test.rs  dsl_integration_test.rs  examples_smoke_test.rs  file_flag_integration_test.rs  json_integration_test.rs  logfmt_integration_test.rs  p1_restore_regression_test.rs  text_integration_test.rs  toml_integration_test.rs  yaml_integration_test.rs
